spoon/spoon_syntax.txt
program ::= {constdef|funcdef|macrodef}

constdef ::= `const` type name `=` expression `;`

funcdef ::= `function` [type] name `(` type name {`,` type name} `)` block

type ::= `int`|`pointer`|`void`

macrodef ::= `macro` name `(` name {`,` name} `)`

block ::=  statement
         | `{` {vardecl} {statement} `}`

vardecl ::= type name {`,` name} `;`

statement ::=  name `(` expression {`,` expression} `)` `;`
             | name `=` expression `;`

expression ::= name | number		// for now!
